tests/baselines/reference/correctlyMarkAliasAsReferences3(strict=true).errors.txt
error TS2318: Cannot find global type 'CallableFunction'.
error TS2318: Cannot find global type 'NewableFunction'.
0.tsx(6,21): error TS2698: Spread types may only be created from object types.


!!! error TS2318: Cannot find global type 'CallableFunction'.
!!! error TS2318: Cannot find global type 'NewableFunction'.
==== 0.tsx (1 errors) ====
    ///<reference path="declaration.d.ts" />
    import * as cx from 'classnames';
    import * as React from "react";
    
    let buttonProps;
    let k = <button {...buttonProps}>
                        ~~~~~~~~~~~
!!! error TS2698: Spread types may only be created from object types.
                <span className={cx('class1', { class2: true })} />
            </button>;
    
==== declaration.d.ts (0 errors) ====
    declare module "classnames";
    